Router/err
Router.cpp: In member function ‘void Router::connectEth(std::string, std::string, int)’:
Router.cpp:60:51: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
     connect("localhost", peer_listenPort, &peer_fd);
                                                   ^
Router.cpp: In member function ‘void Router::parse_packet(Packet, int)’:
Router.cpp:225:13: error: ‘clinet_fd’ was not declared in this scope
   update(p, clinet_fd);
             ^
Router.cpp:231:21: error: expected primary-expression before ‘int’
   connect_clinet(p, int client_fd);
                     ^
make: *** [Router.o] Error 1
